# at32_foc_screwdriver

3d/: 外壳底部.SLDPRT  电机.SLDPRT
code/: AT32M416EBP7_WorkBench.ATWP  CMakeLists.txt  at32m416xx.cfg
code/cmake/at32_workbench/: CMakeLists.txt
code/libraries/cmsis/cm4/device_support/: at32m412_416.h
code/project/inc/: at32m412_416_conf.h  at32m412_416_int.h  at32m412_416_wk_config.h  foc.h  fonts.h  hall.h  pid.h  ssd1306.h  ssd1306_defines.h  wk_adc.h  wk_dma.h  wk_exint.h  wk_system.h  wk_tmr.h
code/project/src/: at32m412_416_int.c  at32m412_416_wk_config.c  foc.c  fonts.c  hall.c  main.c  pid.c  ssd1306.c  syscalls.c  wk_adc.c  wk_dma.c  wk_exint.c  wk_gpio.c  wk_i2c.c  wk_system.c  wk_tmr.c  wk_usart.c
pcb/: foc电动螺丝刀.eprj
